website_homepage/templates/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: website-homepage-service
  namespace: website-homepage
spec:
  selector:
    app: website-homepage-app
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: ClusterIP
