website_homepage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-homepage-ingress
  namespace: homepage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: terrestrial.cloud
      http:
        paths:
          - path: /(.*)
            pathType: Prefix

            backend:

              service:

                name: homepage-service

                port:

                  number: 80
